// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`libk1.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type LibK = {}

=====================================output=====================================
type LibK = {};

================================================================================
`;

exports[`libk2.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type LibK = {
  p: string;
}

=====================================output=====================================
type LibK = {
  p: string,
};

================================================================================
`;
